@@ -25,6 +25,7 @@
  * @test
  * @bug 8210009
  * @summary Source Launcher classloader should support getResource and getResourceAsStream
+ * @enablePreview
  * @modules jdk.compiler
  * @library /tools/lib
  * @build toolbox.JavaTask toolbox.ToolBox
@@ -39,7 +40,7 @@ import toolbox.Task;
 import toolbox.ToolBox;
 
 /*
- * The body of this test is in ${test.src}/src/CLTest.java,
+ * The body of this test is in ${test.src}/src/p/q/CLTest.java,
  * which is executed in single-file source-launcher mode,
  * in order to test the classloader used to launch such programs.
  */
@@ -51,10 +52,9 @@ public class GetResourceTest {
 
     void run() throws Exception {
         ToolBox tb = new ToolBox();
-        Path file = Paths.get(tb.testSrc).resolve("src").resolve("CLTest.java");
+        Path file = Paths.get(tb.testSrc).resolve("src/p/q").resolve("CLTest.java");
         new JavaTask(tb)
-            .vmOptions("--add-exports", "java.base/jdk.internal.classfile=ALL-UNNAMED",
-                    "--add-exports", "java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED")
+            .vmOptions("--enable-preview", "--source", String.valueOf(Runtime.version().feature()))
             .className(file.toString()) // implies source file mode
             .run(Task.Expect.SUCCESS)
             .writeAll();
